--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
         <li>Columbia, South Carolina</li><span>&#64;</span>
         <li>Charlotte, NC</li><span>&#64;</span>
         <li>Denver, Colorado</li><span>&#64;</span>
-        <audio src="https://upload.wikimedia.org/wikipedia/en/0/04/Rayman_2_music_sample.ogg"</audio>
-        <video src="https://upload.wikimedia.org/wikipedia/en/2/28/Illusion_movie.ogg"></video>
-    </ul>
+        <audio src="https://upload.wikimedia.org/wikipedia/en/0/04/Rayman_2_music_sample.ogg" controls autoplay></audio>
+        <video src="https://upload.wikimedia.org/wikipedia/en/2/28/Illusion_movie.ogg" width="150" controls autoplay></video>
     <ol>
     <h2>Cities I would like to visit</h2>
     <p>I have been trying to learn French for a few months and would love to experience real french cuisine. Vancouver is one of the cleanest cities and I hear they have really neat architecture. San Francisco is a tech-hub and I would love to see the Golden Gate Bridge.</p>
